# postgres

contrib/: Makefile  meson.build
contrib/brin_aops/: Makefile  brin_aops--1.0-1.1.sql  brin_aops--1.0.sql  brin_aops.c  brin_aops.control  brin_aops.h  brin_bloom_aops.c  brin_minmax_aops.c  meson.build
contrib/brin_aops/expected/: brin_aops.out  install_brin_aops.out
contrib/brin_aops/sql/: brin_aops.sql  install_brin_aops.sql
contrib/pg_walinspect/: pg_walinspect.c
doc/src/sgml/: monitoring.sgml
src/backend/catalog/: heap.c  index.c  indexing.c  pg_attrdef.c  pg_constraint.c  pg_proc.c  pg_publication.c  pg_type.c  storage.c
src/backend/commands/: copyfrom.c  dbcommands.c  policy.c  publicationcmds.c  sequence.c  statscmds.c  tablecmds.c  tablespace.c  trigger.c  typecmds.c
src/backend/executor/: execIndexing.c  execMain.c  execParallel.c  execReplication.c  functions.c  nodeModifyTable.c
src/backend/lib/: dshash.c
src/backend/nodes/: .gitignore  Makefile  copyfuncs.c  equalfuncs.c  gen_node_support.pl  makefuncs.c  meson.build  ndio.c  ndio_binary.c  ndio_json.c  ndio_text.c  nodedesc.c  outfuncs.c  read.c  readfuncs.c
src/backend/parser/: parse_func.c  parse_utilcmd.c
src/backend/partitioning/: partbounds.c  partdesc.c
src/backend/rewrite/: rewriteDefine.c
src/backend/statistics/: extended_stats.c
src/backend/tcop/: postgres.c
src/include/: c.h  pg_config_manual.h
src/include/access/: brin_xlog.h  heapam_xlog.h  htup_details.h  nbtree.h  nbtree_spec.h  nbtree_specfuncs.h  nbtxlog.h  tableam.h  tupdesc.h  xact.h  xlog.h  xlog_internal.h  xlogreader.h  xlogrecord.h
src/include/catalog/: pg_constraint.h  pg_type.h
src/include/executor/: executor.h
(+88 files in other folders)
